update all pages

--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell animate-box">
 							<h1 class="text-center">About Us</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<p style="font-size: 30px;">Made with love by the fine folks at <b>ElevateFit Club</b></p>
 						</div>
 					</div>
 				</div>
@@ -134,11 +134,9 @@
 						<img class="img-responsive animate-box" src="images/home-image-3.jpg" alt="About">
 					</div>
 					<div class="col-md-12 col-md-offset-0 animate-box">
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
-						<blockquote>
-						  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-						</blockquote>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
+						
+						<p>Our journey began with a simple belief: fitness is more than just exercise—it's a way of life. We set out to create a space where people can challenge their limits, achieve their goals, and discover their full potential. Despite the obstacles along the way, we remain dedicated to empowering our members, providing expert guidance, and building a supportive fitness community. Together, we are committed to health, strength, and lifelong wellness.</p>
+						
 					</div>
 				</div>
 				<div class="row">
@@ -255,13 +253,13 @@
 				</div>
 			</div>
 		</div>
-		<div id="fh5co-programs-section" class="fh5co-lightgray-section">
+		<div id="fh5co-programs-section">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<div class="heading-section text-center animate-box">
 							<h2>Our Programs</h2>
-							<!-- <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
+							<p>"Though apart, they train together on the path to health and strength."</p>
 						</div>
 					</div>
 				</div>
@@ -270,7 +268,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-dumbell.svg" alt="Cycling">
 							<h3>Body Combat</h3>
-							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
+							<p>Body Combat is our high-energy fitness program, blending martial arts techniques with intense cardio workouts. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -278,7 +276,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-yoga.svg" alt="">
 							<h3>Yoga Programs</h3>
-							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
+							<p>Yoga Programs offer a blend of flexibility, strength, and mindfulness, promoting physical and mental well-being. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -286,7 +284,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-cycling.svg" alt="">
 							<h3>Cycling Program</h3>
-							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
+							<p>Our Cycling Program delivers an exhilarating cardio workout, enhancing endurance, strength, and overall fitness. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -294,7 +292,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-boxing.svg" alt="Cycling">
 							<h3>Boxing Fitness</h3>
-							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
+							<p>Boxing Fitness combines powerful punches with dynamic movements, boosting strength, agility, and cardiovascular health. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -302,7 +300,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-swimming.svg" alt="">
 							<h3>Swimming Program</h3>
-							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
+							<p>Our Swimming Program provides a full-body, low-impact workout, improving endurance, strength, and flexibility. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -310,11 +308,10 @@
 						<div class="program animate-box">
 							<img src="images/fit-massage.svg" alt="">
 							<h3>Massage</h3>
-							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
+							<p>Our Massage program offers therapeutic treatments to relieve muscle tension, reduce stress, and enhance relaxation. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
