--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell animate-box">
 							<h1 class="text-center">Contact Us</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<p style="font-size: 30px;">Made with love by the fine folks at <b>ElevateFit Club</b></p>
 						</div>
 					</div>
 				</div>
@@ -172,7 +172,9 @@
 			</div>
 		</div>
 		<!-- END fh5co-contact -->
-		<div id="map" class="fh5co-map"></div>
+		<div id="map" class="fh5co-map">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.7931486953166!2d79.04507517485175!3d21.12081138055161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c07671017899%3A0x2cbfd7b43417b86c!2sXceller%20IT%20Services!5e0!3m2!1sen!2sin!4v1727293590992!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		</div>
 		<!-- END map -->
 		<footer>
 			<div id="footer">
@@ -215,7 +217,7 @@
 							</form>
 						</div>
 					</div>
-					<div class="row copy-right">
+					<!-- <div class="row copy-right">
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="fh5co-social-icons">
 								<a href="#"><i class="icon-twitter2"></i></a>
@@ -226,7 +228,7 @@
 							</p>
 							<p>Copyright 2016 Free Html5 <a href="#">Fitness</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</footer>
