--- a/trainer.html
+++ b/trainer.html
@@ -113,14 +113,14 @@
 			</header>		
 		</div>
 		<!-- end:fh5co-header -->
-		<div class="fh5co-parallax" style="background-image: url(images/home-image-3.jpg);" data-stellar-background-ratio="0.5">
+		<div class="fh5co-parallax" style="background-image: url(images/img2.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell animate-box">
-							<h1 class="text-center">Trainers</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<h1 class="text-center" >Trainers</h1>
+							<p style="font-size: 30px; color:whitesmoke">Made with love by the fine folks at <b>ElevateFit Club</b></p>
 						</div>
 					</div>
 				</div>
@@ -129,11 +129,21 @@
 		<!-- end:fh5co-hero -->
 		<div id="fh5co-team-section">
 			<div class="container">
+				<div class="row about">
+					<div class="col-md-12 col-md-offset-0">
+						<img class="img-responsive animate-box" src="images/home-image-3.jpg" alt="About">
+					</div>
+					<div class="col-md-12 col-md-offset-0 animate-box">
+						
+						<p>Our journey began with a simple belief: fitness is more than just exercise—it's a way of life. We set out to create a space where people can challenge their limits, achieve their goals, and discover their full potential. Despite the obstacles along the way, we remain dedicated to empowering our members, providing expert guidance, and building a supportive fitness community. Together, we are committed to health, strength, and lifelong wellness.</p>
+						
+					</div>
+				</div>
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<div class="heading-section text-center animate-box">
 							<h2>Meet Our Trainers</h2>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p>Guided by our experienced trainers, you'll push limits and unlock your true fitness potential.</p>
 						</div>
 					</div>
 				</div>
@@ -142,9 +152,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-1.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Body Trainer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+									<h3>Prawjal Burde</h3>
+									<h3>Body Trainer</h3>
+									<!-- <span>Head Strength & Conditioning Coach</span> -->
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -158,9 +169,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-2.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>James Smith</h3>
-									<span>Swimming Trainer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+									<h3>Pooja Desai</h3>
+									<h3>Swimming Trainer</h3>
+									<span></span>
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -174,9 +186,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-3.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Chief Executive Officer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3>Rohan Singh</h3>
+									<h3>High-Intensity Interval Training </h3>
+									<!-- <span>Chief Executive Officer</span> -->
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -190,9 +203,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-4.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Chief Executive Officer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3>Ananya Iyer</h3>
+									<h3>Functional Training</h3>
+									<!-- <span>Chief Executive Officer</span> -->
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -206,9 +220,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-5.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Chief Executive Officer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3>Vikram Chauhan</h3>
+									<h3>Group Fitness Classes</h3>
+									<!-- <span>Chief Executive Officer</span> -->
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -222,9 +237,10 @@
 						<div class="team-section-grid animate-box" style="background-image: url(images/trainer-6.jpg);">
 							<div class="overlay-section">
 								<div class="desc">
-									<h3>John Doe</h3>
-									<span>Chief Executive Officer</span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<h3>Kavya Kapoor</h3>
+									<h3>Personal Training </h3>
+									<!-- <span>Chief Executive Officer</span> -->
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 									<p class="fh5co-social-icons">
 										<a href="#"><i class="icon-twitter-with-circle"></i></a>
 										<a href="#"><i class="icon-facebook-with-circle"></i></a>
@@ -237,69 +253,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="fh5co-programs-section" class="fh5co-lightgray-section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2">
-						<div class="heading-section text-center animate-box">
-							<h2>Our Programs</h2>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						</div>
-					</div>
-				</div>
-				<div class="row text-center">
-					<div class="col-md-4 col-sm-6">
-						<div class="program animate-box">
-							<img src="images/fit-dumbell.svg" alt="Cycling">
-							<h3>Body Combat</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-							<span><a href="#" class="btn btn-default">Join Now</a></span>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="program animate-box">
-							<img src="images/fit-yoga.svg" alt="">
-							<h3>Yoga Programs</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-							<span><a href="#" class="btn btn-default">Join Now</a></span>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="program animate-box">
-							<img src="images/fit-cycling.svg" alt="">
-							<h3>Cycling Program</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-							<span><a href="#" class="btn btn-default">Join Now</a></span>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="program animate-box">
-							<img src="images/fit-boxing.svg" alt="Cycling">
-							<h3>Boxing Fitness</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-							<span><a href="#" class="btn btn-default">Join Now</a></span>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="program animate-box">
-							<img src="images/fit-swimming.svg" alt="">
-							<h3>Swimming Program</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-							<span><a href="#" class="btn btn-default">Join Now</a></span>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="program animate-box">
-							<img src="images/fit-massage.svg" alt="">
-							<h3>Massage</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-							<span><a href="#" class="btn btn-default">Join Now</a></span>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
+		
 		<footer>
 			<div id="footer">
 				<div class="container">
@@ -341,7 +295,7 @@
 							</form>
 						</div>
 					</div>
-					<div class="row copy-right">
+					<!-- <div class="row copy-right">
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="fh5co-social-icons">
 								<a href="#"><i class="icon-twitter2"></i></a>
@@ -352,7 +306,7 @@
 							</p>
 							<p>Copyright 2016 Free Html5 <a href="#">Fitness</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</footer>
