--- a/classes.html
+++ b/classes.html
@@ -120,8 +120,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell animate-box">
-							<h1 class="text-center">Classes</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<h1 class="text-center" style=" color:whitesmoke">Classes</h1>
+							<p style="font-size: 30px;">Made with love by the fine folks at <b>ElevateFit Club</b></p>
 						</div>
 					</div>
 				</div>
@@ -133,7 +133,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<div class="heading-section text-center animate-box">
-							<h2>Our Programs</h2>
+							<h2>Our Classes</h2>
 							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 						</div>
 					</div>
@@ -190,291 +190,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="fh5co-schedule-section" class="fh5co-lightgray-section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2">
-						<div class="heading-section text-center animate-box">
-							<h2>Class Schedule</h2>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						</div>
-					</div>
-				</div>
-				<div class="row animate-box">
-					<div class="col-md-10 col-md-offset-1 text-center">
-						<ul class="schedule">
-							<li><a href="#" class="active" data-sched="sunday">Sunday</a></li>
-							<li><a href="#" data-sched="monday">Monday</a></li>
-							<li><a href="#" data-sched="tuesday">Tuesday</a></li>
-							<li><a href="#" data-sched="wednesday">Wednesday</a></li>
-							<li><a href="#" data-sched="thursday">Thursday</a></li>
-							<li><a href="#" data-sched="monday">Monday</a></li>
-							<li><a href="#" data-sched="saturday">Saturday</a></li>
-						</ul>
-					</div>
-					<div class="row text-center">
-
-						<div class="col-md-12 schedule-container">
-
-							<div class="schedule-content active" data-day="sunday">
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-dumbell.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Body Building</h3>
-										<span>John Doe</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-yoga.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Yoga Programs</h3>
-										<span>James Smith</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-cycling.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Cycling Program</h3>
-										<span>Rita Doe</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-boxing.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Boxing Fitness</h3>
-										<span>John Dose</span>
-									</div>
-								</div>
-							</div>
-							<!-- END sched-content -->
-
-							<div class="schedule-content" data-day="monday">
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-yoga.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Yoga Programs</h3>
-										<span>James Smith</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-dumbell.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Body Building</h3>
-										<span>John Doe</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-boxing.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Boxing Fitness</h3>
-										<span>John Dose</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-cycling.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Cycling Program</h3>
-										<span>Rita Doe</span>
-									</div>
-								</div>
-								
-							</div>
-							<!-- END sched-content -->
-
-							<div class="schedule-content" data-day="tuesday">
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-dumbell.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Body Building</h3>
-										<span>John Doe</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-yoga.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Yoga Programs</h3>
-										<span>James Smith</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-cycling.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Cycling Program</h3>
-										<span>Rita Doe</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-boxing.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Boxing Fitness</h3>
-										<span>John Dose</span>
-									</div>
-								</div>
-							</div>
-							<!-- END sched-content -->
-
-							<div class="schedule-content" data-day="wednesday">
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-yoga.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Yoga Programs</h3>
-										<span>James Smith</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-dumbell.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Body Building</h3>
-										<span>John Doe</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-boxing.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Boxing Fitness</h3>
-										<span>John Dose</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-cycling.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Cycling Program</h3>
-										<span>Rita Doe</span>
-									</div>
-								</div>
-							</div>
-							<!-- END sched-content -->
-
-							<div class="schedule-content" data-day="thursday">
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-dumbell.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Body Building</h3>
-										<span>John Doe</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-yoga.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Yoga Programs</h3>
-										<span>James Smith</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-cycling.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Cycling Program</h3>
-										<span>Rita Doe</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-boxing.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Boxing Fitness</h3>
-										<span>John Dose</span>
-									</div>
-								</div>
-							</div>
-							<!-- END sched-content -->
-
-							<div class="schedule-content" data-day="friday">
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-yoga.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Yoga Programs</h3>
-										<span>James Smith</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-dumbell.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Body Building</h3>
-										<span>John Doe</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-boxing.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Boxing Fitness</h3>
-										<span>John Dose</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-cycling.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Cycling Program</h3>
-										<span>Rita Doe</span>
-									</div>
-								</div>
-							</div>
-							<!-- END sched-content -->
-
-							<div class="schedule-content" data-day="saturday">
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-dumbell.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Body Building</h3>
-										<span>John Doe</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-yoga.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Yoga Programs</h3>
-										<span>James Smith</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-cycling.svg" alt="">
-										<small>06AM-7AM</small>
-										<h3>Cycling Program</h3>
-										<span>Rita Doe</span>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="program program-schedule">
-										<img src="images/fit-boxing.svg" alt="Cycling">
-										<small>06AM-7AM</small>
-										<h3>Boxing Fitness</h3>
-										<span>John Dose</span>
-									</div>
-								</div>
-							</div>
-							<!-- END sched-content -->
-						</div>
-
-						
-					</div>
-				</div>
-			</div>
-		</div>
+	
 		<footer>
 			<div id="footer">
 				<div class="container">
@@ -516,7 +232,7 @@
 							</form>
 						</div>
 					</div>
-					<div class="row copy-right">
+					<!-- <div class="row copy-right">
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="fh5co-social-icons">
 								<a href="#"><i class="icon-twitter2"></i></a>
@@ -527,7 +243,7 @@
 							</p>
 							<p>Copyright 2016 Free Html5 <a href="#">Fitness</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</footer>
