--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="fh5co-parallax" style="background-image: url(images/home-image-3.jpg);" data-stellar-background-ratio="0.5">
+		<div class="fh5co-parallax" style="background-image: url(images/img1.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -622,7 +622,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<div class="heading-section text-center animate-box">
-							<h2>Pricing Plan</h2>
+							<h2>Club Plan</h2>
 							<p>Separated by distance, united in the quest for fitness and well-being.</p>
 						</div>
 					</div>
@@ -632,7 +632,7 @@
 					<div class="col-md-3 animate-box">
 						<div class="price-box animate-box">
 							<h2 class="pricing-plan">Starter</h2>
-							<div class="price"><sup class="currency">$</sup>9<small>/month</small></div>
+							<div class="price"><sup class="currency"> ₹</sup>800<small>/month</small></div>
 							<p>Far beyond the limits of ordinary, our pricing plans bring you closer to your fitness goals.</p>
 							<ul class="classes">
 								<li>15 Cardio Classes</li>
@@ -650,7 +650,7 @@
 					<div class="col-md-3 animate-box">
 						<div class="price-box animate-box">
 							<h2 class="pricing-plan">Basic</h2>
-							<div class="price"><sup class="currency">$</sup>27<small>/month</small></div>
+							<div class="price"><sup class="currency">₹</sup>2257<small>/month</small></div>
 							<p>Miles away from average, our flexible plans are designed to fit your unique fitness journey.</p>
 							<ul class="classes">
 								<li>15 Cardio Classes</li>
@@ -668,7 +668,7 @@
 					<div class="col-md-3 animate-box">
 						<div class="price-box animate-box popular">
 							<h2 class="pricing-plan pricing-plan-offer">Pro <span>Best Offer</span></h2>
-							<div class="price"><sup class="currency">$</sup>74<small>/month</small></div>
+							<div class="price"><sup class="currency">₹</sup>6180<small>/month</small></div>
 							<p>Beyond the horizon of typical memberships, our plans are tailored for every fitness level.</p>
 							<ul class="classes">
 								<li>15 Cardio Classes</li>
@@ -686,7 +686,7 @@
 					<div class="col-md-3 animate-box">
 						<div class="price-box animate-box">
 							<h2 class="pricing-plan">Unlimited</h2>
-							<div class="price"><sup class="currency">$</sup>140<small>/month</small></div>
+							<div class="price"><sup class="currency">₹</sup>11705<small>/month</small></div>
 							<p>Far from the standard, our pricing plans offer you the best value on your path to health and wellness.</p>
 							<ul class="classes">
 								<li>15 Cardio Classes</li>
@@ -823,7 +823,7 @@
 							</form>
 						</div>
 					</div>
-					<div class="row copy-right">
+					<!-- <div class="row copy-right">
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="fh5co-social-icons">
 								<a href="#"><i class="icon-twitter2"></i></a>
@@ -834,7 +834,7 @@
 							</p>
 							<p>Copyright 2016 Free Html5 <a href="#">Fitness</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</footer>
