--- a/schedule.html
+++ b/schedule.html
@@ -120,7 +120,7 @@
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell animate-box">
 							<h1 class="text-center">Schedule</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<p style="font-size: 30px;">Made with love by the fine folks at <b>ElevateFit Club</b></p>
 						</div>
 					</div>
 				</div>
@@ -157,33 +157,33 @@
 								<div class="col-md-3 col-sm-6">
 									<div class="program program-schedule">
 										<img src="images/fit-dumbell.svg" alt="Cycling">
-										<small>06AM-7AM</small>
+										<small>06 to 08AM</small>
 										<h3>Body Building</h3>
-										<span>John Doe</span>
+										<span>Yasmin Karachiwala</span>
 									</div>
 								</div>
 								<div class="col-md-3 col-sm-6">
 									<div class="program program-schedule">
 										<img src="images/fit-yoga.svg" alt="">
-										<small>06AM-7AM</small>
+										<small>06 to 08AM</small>
 										<h3>Yoga Programs</h3>
-										<span>James Smith</span>
+										<span>Prashant Sawant</span>
 									</div>
 								</div>
 								<div class="col-md-3 col-sm-6">
 									<div class="program program-schedule">
 										<img src="images/fit-cycling.svg" alt="">
-										<small>06AM-7AM</small>
+										<small>06 to 08AM</small>
 										<h3>Cycling Program</h3>
-										<span>Rita Doe</span>
+										<span>Shyam Gopalan </span>
 									</div>
 								</div>
 								<div class="col-md-3 col-sm-6">
 									<div class="program program-schedule">
 										<img src="images/fit-boxing.svg" alt="Cycling">
-										<small>06AM-7AM</small>
+										<small>06 to 08AM</small>
 										<h3>Boxing Fitness</h3>
-										<span>John Dose</span>
+										<span>Sameer Jaura </span>
 									</div>
 								</div>
 							</div>
@@ -412,13 +412,13 @@
 				</div>
 			</div>
 		</div>
-		<div id="fh5co-programs-section">
+		<!-- <div id="fh5co-programs-section"> 
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<div class="heading-section text-center animate-box">
 							<h2>Our Programs</h2>
-							<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p>"Though apart, they train together on the path to health and strength."</p>
 						</div>
 					</div>
 				</div>
@@ -427,7 +427,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-dumbell.svg" alt="Cycling">
 							<h3>Body Combat</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<p>Body Combat is our high-energy fitness program, blending martial arts techniques with intense cardio workouts. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -435,7 +435,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-yoga.svg" alt="">
 							<h3>Yoga Programs</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<p>Yoga Programs offer a blend of flexibility, strength, and mindfulness, promoting physical and mental well-being. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -443,7 +443,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-cycling.svg" alt="">
 							<h3>Cycling Program</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<p>Our Cycling Program delivers an exhilarating cardio workout, enhancing endurance, strength, and overall fitness. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -451,7 +451,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-boxing.svg" alt="Cycling">
 							<h3>Boxing Fitness</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<p>Boxing Fitness combines powerful punches with dynamic movements, boosting strength, agility, and cardiovascular health. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -459,7 +459,7 @@
 						<div class="program animate-box">
 							<img src="images/fit-swimming.svg" alt="">
 							<h3>Swimming Program</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<p>Our Swimming Program provides a full-body, low-impact workout, improving endurance, strength, and flexibility. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
@@ -467,14 +467,13 @@
 						<div class="program animate-box">
 							<img src="images/fit-massage.svg" alt="">
 							<h3>Massage</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<p>Our Massage program offers therapeutic treatments to relieve muscle tension, reduce stress, and enhance relaxation. </p>
 							<span><a href="#" class="btn btn-default">Join Now</a></span>
 						</div>
 					</div>
-
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<footer>
 			<div id="footer">
 				<div class="container">
@@ -516,7 +515,7 @@
 							</form>
 						</div>
 					</div>
-					<div class="row copy-right">
+					<!-- <div class="row copy-right">
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="fh5co-social-icons">
 								<a href="#"><i class="icon-twitter2"></i></a>
@@ -527,7 +526,7 @@
 							</p>
 							<p>Copyright 2016 Free Html5 <a href="#">Fitness</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</footer>
